--- a/index.html
+++ b/index.html
@@ -1,58 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cats</title>
-  <link rel="stylesheet" href="./public/css/main.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <link rel="icon" type="image/png" href="./public/img/images.jpeg" style="border-radius: 50/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./public/css/main.css" type="text/css">
+  <title>WAR ROOM</title>
 </head>
 <body>
-
-  <header class="navbar">
-    <nav aria-label="Main Navigation">
-      <div class="nav-content">
-        <ul class="nav-links">
-          <li><a href="#">Buy</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Customers</a></li>
-        </ul>
-        <img src="./public/img/istockphoto-1214084790-612x612.jpg" alt="Logo" class="nav-logo" />
-      </div>
-    </nav>
-  </header>
-
-  <main>
-    <section class="slider-section">
-      <div class="swiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="./public/img/Cat-on-couch.jpg" alt="Cat on Couch"></div>
-          <div class="swiper-slide"><img src="./public/img/generated_image.png" alt="Cat 2"></div>
-          <div class="swiper-slide"><img src="./public/img/Portrait-of-a-cat-with-whiskers-visible.jpg" alt="Cat 3"></div>
-          <div class="swiper-slide"><img src="./public/img/what-is-a-cats-lifespan-lakeland-fl-scaled.jpg" alt="Cat 4"></div>
-          <div class="swiper-slide"><img src="./public/img/images (1).jpg" alt="Cat 5"></div>
-        </div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-pagination"></div>
-      </div>
-    </section>
-  </main>
-
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script>
-    const swiper = new Swiper('.swiper', {
-      loop: true,
-      navigation: {
-        nextEl: '.swiper-button-next',
-        prevEl: '.swiper-button-prev'
-      },
-      pagination: {
-        el: '.swiper-pagination',
-        clickable: true
-      }
-    });
-  </script>
+  
 </body>
 </html>
