--- a/index.html
+++ b/index.html
@@ -43,112 +43,70 @@
     <div class="par">
       <h1>موضوع اول</h1>
       <div class="product-image">
-        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-          <rect x="20" y="40" width="160" height="120" rx="10" fill="#4A90E2" stroke="#2C5AA0" stroke-width="2"/>
-          <circle cx="100" cy="100" r="30" fill="#FFD700"/>
-          <rect x="60" y="160" width="80" height="10" rx="5" fill="#8B4513"/>
-        </svg>
+        <img src="./public/img/sell3.png" alt="">
       </div>
       <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
     </div>
     <div class="par">
       <h1>موضوع دوم</h1>
       <div class="product-image">
-        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-          <rect x="30" y="50" width="140" height="100" rx="15" fill="#50C878" stroke="#2D8B47" stroke-width="2"/>
-          <circle cx="70" cy="90" r="15" fill="#FF6B6B"/>
-          <circle cx="130" cy="90" r="15" fill="#FF6B6B"/>
-          <path d="M80 130 Q100 150 120 130" stroke="#8B4513" stroke-width="3" fill="none"/>
-        </svg>
+        <img src="./public/img/sell1.png" alt="">
       </div>
       <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
     </div>
     <div class="par">
       <h1>موضوع سوم</h1>
       <div class="product-image">
-        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="100" cy="100" r="60" fill="#9370DB" stroke="#4B0082" stroke-width="2"/>
-          <polygon points="100,50 120,90 160,90 125,120 140,160 100,140 60,160 75,120 40,90 80,90" fill="#FFD700"/>
-        </svg>
+        <img src="./public/img/sell4.jpeg" alt="">
       </div>
       <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
     </div>
     <div class="par">
       <h1>موضوع چهارم</h1>
       <div class="product-image">
-        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-          <rect x="40" y="60" width="120" height="80" rx="5" fill="#FF6347" stroke="#CD5C5C" stroke-width="2"/>
-          <rect x="50" y="70" width="100" height="20" fill="#87CEEB"/>
-          <rect x="50" y="100" width="40" height="30" fill="#32CD32"/>
-          <rect x="100" y="100" width="40" height="30" fill="#FFD700"/>
-        </svg>
+        <img src="./public/img/sell8.avif" alt="">
       </div>
       <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
     </div>
     <div class="par">
       <h1>موضوع پنجم</h1>
       <div class="product-image">
-        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-          <path d="M100 40 L160 160 L40 160 Z" fill="#20B2AA" stroke="#008B8B" stroke-width="2"/>
-          <circle cx="100" cy="100" r="20" fill="#FF4500"/>
-          <rect x="90" y="140" width="20" height="30" fill="#8B4513"/>
-        </svg>
+        <img src="./public/img/sell6.webp" alt=""/>
       </div>
       <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
     </div>
     <div class="par">
       <h1>موضوع ششم</h1>
       <div class="product-image">
-        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-          <rect x="50" y="50" width="100" height="100" rx="20" fill="#FF69B4" stroke="#C71585" stroke-width="2"/>
-          <circle cx="85" cy="85" r="10" fill="#FFFFFF"/>
-          <circle cx="115" cy="85" r="10" fill="#FFFFFF"/>
-          <path d="M75 120 Q100 140 125 120" stroke="#FFFFFF" stroke-width="3" fill="none"/>
-        </svg>
+        <img src="./public/img/sell7.png" alt="">
       </div>
       <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
     </div>
     <div class="par">
       <h1>موضوع هفتم</h1>
       <div class="product-image">
-        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-          <ellipse cx="100" cy="100" rx="70" ry="50" fill="#8A2BE2" stroke="#4B0082" stroke-width="2"/>
-          <rect x="80" y="60" width="40" height="20" fill="#FFD700"/>
-          <rect x="80" y="120" width="40" height="20" fill="#FFD700"/>
-        </svg>
+        <img src="./public/img/sell9.webp" alt="">
       </div>
       <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
     </div>
     <div class="par">
       <h1>موضوع هشتم</h1>
       <div class="product-image">
-        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-          <polygon points="100,30 170,100 100,170 30,100" fill="#FF4500" stroke="#FF0000" stroke-width="2"/>
-          <circle cx="100" cy="100" r="25" fill="#FFFFFF"/>
-          <rect x="90" y="90" width="20" height="20" fill="#000000"/>
-        </svg>
+        <img src="./public/img/sell9.png" alt="">
       </div>
       <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
     </div>
     <div class="par">
       <h1>موضوع نهم</h1>
       <div class="product-image">
-        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-          <rect x="40" y="40" width="120" height="120" fill="#32CD32" stroke="#228B22" stroke-width="2"/>
-          <circle cx="100" cy="100" r="40" fill="#FF0000"/>
-          <rect x="85" y="60" width="30" height="80" fill="#FFFFFF" transform="rotate(45 100 100)"/>
-        </svg>
+        <img src="./public/img/sell10.png" alt="">
       </div>
       <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
     </div>
     <div class="par">
       <h1>موضوع دهم</h1>
       <div class="product-image">
-        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-          <path d="M50 100 Q100 50 150 100 Q100 150 50 100" fill="#9370DB" stroke="#4B0082" stroke-width="2"/>
-          <circle cx="100" cy="100" r="15" fill="#FFD700"/>
-          <rect x="90" y="130" width="20" height="30" fill="#8B4513"/>
-        </svg>
+        <img src="./public/img/sell11.png" alt="">
       </div>
       <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.</p>
     </div>
